--- a/todo
+++ b/todo
@@ -3,9 +3,11 @@ DONE
 - make a missing image graphic for fallback
 - detect https://makecode.com/_g3sMJHh8dYi5 links
 - detect github links
+- redirect `/` to `/latest` ?  https://nextjs.org/docs/api-reference/next.config.js/redirects
 
 TODO
+- configure subdomain on jacobcarpenter.com
 - style game cards better
+    - WIP fix issue with 2048 tile on all-time
 - it seems like the forum tagging/categorization is not what it used to be; maybe update queries to not rely on tags?
-- redirect `/` to `/latest` ?  https://nextjs.org/docs/api-reference/next.config.js/redirects
 - configure lint
