--- a/todo
+++ b/todo
@@ -19,5 +19,20 @@ TODO
 - add author pages
     - from discourse api or cache? probably cache...
     - store created date in cache for sorting
+    - store cached like count for sorting (actions_summary.find(x => x.id === 2).count)
+    - store user_id for querying
 - indicate current page in nav?
 - CI ? GH Actions ?
+- figure out how external contributors can run; cosmos creds are secret
+
+
+
+new page heirarchy
+
+all-time | latest
+            rating | newest
+^ rating and newest? feels less natural here, but for consistency?
+
+author page(s)
+rating | newest
+
