--- a/todo
+++ b/todo
@@ -18,9 +18,9 @@ TODO
 - add page titles
 - add author pages
     - from discourse api or cache? probably cache...
-    - store created date in cache for sorting
-    - store cached like count for sorting (actions_summary.find(x => x.id === 2).count)
-    - store user_id for querying
+    - ~~store created date in cache for sorting~~
+    - ~~store cached like count for sorting (actions_summary.find(x => x.id === 2).count)~~
+    - ~~store user_id for querying~~
 - indicate current page in nav?
 - CI ? GH Actions ?
 - figure out how external contributors can run; cosmos creds are secret
