--- a/todo
+++ b/todo
@@ -14,6 +14,7 @@ TODO
 - style game cards better
     - WIP fix issue with 2048 tile on all-time
 - rework latest/newest division; instead show the same set of games with two different sort orders?
+- add link to "home"
 - add description
 - add link to forum
 - add link to github
